<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/tia"

        >
        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_special_bg"
            android:padding="10dp"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/whiteX"
            android:contentDescription="@string/back"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="-60dp"
            android:padding="5dp"

            >
            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/logo"
                android:layout_marginBottom="-5dp"
                app:tint="@color/whiteX"
                android:contentDescription="@string/logo"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:textSize="30sp"
            android:fontFamily="@font/ubuntu_bold"
            android:textColor="@color/white"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-50dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="40dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="40dp"
                    >
                    <com.jem.fliptabs.FlipTab
                        android:id="@+id/flipTab"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginHorizontal="40dp"
                        app:borderWidth="3dp"
                        app:flipAnimationDuration="400"
                        app:highlightColor="@color/whiteX"
                        app:leftTabText="Student"
                        app:overallColor="@color/tia"
                        app:removeDefaultPadding="false"
                        app:rightTabText="Teacher"
                        app:startingTab="left"
                        app:textColor="@color/whiteX"
                        app:wobbleAngle="3"
                        app:wobbleReturnAnimationDuration="200"
                        />


                    <androidx.fragment.app.FragmentContainerView
                        android:id="@+id/regFragment"
                        android:name="com.diu.mlab.foodie.zone.presentation.auth.StudentRegFragment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:tag="my_tag"
                        tools:layout="@layout/fragment_student_reg"
                        />
                </LinearLayout>

            </ScrollView>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whiteX"
        android:visibility="gone"
        >


        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/logo"
            android:transitionName="logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:indicatorColor="@color/tia"
            app:indicatorInset="20dp"
            app:indicatorSize="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img"
            app:trackCornerRadius="5dp"
            app:trackThickness="14dp" />




        <!--  <com.google.android.material.floatingactionbutton.FloatingActionButton-->
        <!--  android:id="@+id/fab"-->
        <!--  android:layout_width="wrap_content"-->
        <!--  android:layout_height="wrap_content"-->
        <!--  android:layout_gravity="bottom|end"-->
        <!--  android:layout_marginEnd="16dp"-->
        <!--  android:layout_marginBottom="16dp"-->
        <!--  app:srcCompat="@android:drawable/ic_dialog_email" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>