<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        android:layout_marginBottom="10dp"
        app:cardElevation="0dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <LinearLayout
                android:id="@+id/btnFoodView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".75"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"

                >
                <ImageView
                    android:id="@+id/pic"
                    android:layout_width="115dp"
                    android:layout_height="85sp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/logo"
                    android:scaleType="centerCrop"
                    android:background="@color/whiteY"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:layout_marginStart="10dp"

                    >
                    <TextView
                        android:id="@+id/nm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ganza Ultra Pro Max"
                        android:fontFamily="@font/ubuntu_bold"
                        android:textSize="14sp"
                        android:textColor="@color/darkX"
                        />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ubuntu_regular"
                            android:text="@string/mul"
                            android:textColor="@color/darkX"
                            android:textSize="12sp"
                            />

                        <TextView
                            android:id="@+id/quantity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ubuntu_regular"
                            android:text="1"
                            android:textColor="@color/darkX"
                            android:textSize="12sp"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/taha"
                            android:fontFamily="@font/ubuntu_bold"
                            android:textSize="12sp"
                            android:textColor="@color/darkX"
                            />
                        <TextView
                            android:id="@+id/price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:text="200"
                            android:fontFamily="@font/ubuntu_bold"
                            android:textSize="12sp"
                            android:textColor="@color/darkX"
                            />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>



            <LinearLayout
                android:id="@+id/btnOrder"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".25"
                android:background="@color/tia"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/tia"
                    android:gravity="center"
                    android:text="Order      Now"
                    android:lineHeight="24dp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:textSize="20sp"
                    android:textColor="@color/whiteX"
                    />
            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

<!--    <LinearLayout-->
<!--        android:id="@+id/shopView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@color/whiteX"-->
<!--        android:clickable="true"-->
<!--        android:focusable="true"-->
<!--        android:foreground="?android:attr/selectableItemBackground"-->
<!--        android:layout_marginVertical="2dp"-->
<!--        >-->
<!--        <View-->
<!--            android:layout_width="3dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:background="@color/tia"-->
<!--            android:layout_margin="5dp"-->
<!--            />-->

<!--    </LinearLayout>-->



</LinearLayout>